progress with workout service tests